--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,10 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ['main']
+    branches: 
+      - 'main'
+      - 'master'
+      - 'ci/**'
     
 env:
   REGISTRY: ghcr.io
